This is first commit

--- a/TicketReservingSystem/appsettings.Development.json
+++ b/TicketReservingSystem/appsettings.Development.json
@@ -6,4 +6,10 @@
       "Microsoft": "Information"
     }
   }
+
+  {
+    "ConnectionStrings": {
+      "BloggingDatabase": "Server=(localdb)\\mssqllocaldb;Database=EFGetStarted.ConsoleApp.NewDb;Trusted_Connection=True;"
+    }
+  }
 }
